--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.4.1"
+agp = "8.4.2"
 kotlin = "1.9.0"
 #noinspection GradleDependency
 coreKtx = "1.6.0" # android 11 compatability
@@ -10,9 +10,9 @@ eventbus = "3.3.1"
 #noinspection GradleDependency
 lifecycle = "2.3.1" # android 11 compatability
 coroutines = "1.9.0-RC"
-gson = "2.10.1"
 ktor = "2.3.11"
 kotds = "1.0"
+constraintlayout = "2.1.4"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -26,6 +26,7 @@ ktorcore = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor" 
 ktorcio = { group = "io.ktor", name = "ktor-client-cio", version.ref = "ktor" }
 kotds = { group = "com.github.S-H-Y-A.KotlinDataStore", name ="core", version.ref = "kotds" }
 kotdsinit = { group = "com.github.S-H-Y-A.KotlinDataStore", name ="initializer", version.ref = "kotds" }
+constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
