подключён media3.exoplayer, работает постабильнее обычного проигрывателч

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.4.2"
+agp = "8.5.0"
 kotlin = "1.9.0"
 #noinspection GradleDependency
 coreKtx = "1.6.0" # android 11 compatability
@@ -12,7 +12,8 @@ lifecycle = "2.3.1" # android 11 compatability
 coroutines = "1.9.0-RC"
 ktor = "2.3.11"
 kotds = "1.0"
-constraintlayout = "2.1.4"
+constraintlayout = "2.2.0"
+media3 = "1.5.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -27,6 +28,8 @@ ktorcio = { group = "io.ktor", name = "ktor-client-cio", version.ref = "ktor" }
 kotds = { group = "com.github.S-H-Y-A.KotlinDataStore", name ="core", version.ref = "kotds" }
 kotdsinit = { group = "com.github.S-H-Y-A.KotlinDataStore", name ="initializer", version.ref = "kotds" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3" }
+media3-ui = { group = "androidx.media3", name = "media3-ui", version.ref = "media3" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
